--- a/source/_posts/算法·搜索与图论.md
+++ b/source/_posts/算法·搜索与图论.md
@@ -194,7 +194,7 @@ while (q.size())//队列不空
 ```
 
 ```c++
-void bfs()
+int bfs()
 {
 	int hh =0,tt=0;//定义队头队尾
     q[0]=1;//q的第一个元素起点
@@ -205,9 +205,14 @@ void bfs()
             for(int i = h[t];i!=-1;i=e[i])//拓展队头
             {
                 int j =e[i];//拓展到队头连接的下一个点
-                
+               if(d[j]==-1)//d[j]没有被拓展过
+               {
+                   d[j]=d[t]+1;
+                   q[++tt]=j;
+               }
             }
     }
+    return 0;
 }
 ```
 
@@ -217,40 +222,594 @@ void bfs()
 
 时间复杂度O(n+m)，n表示点数，m表示边数
 
+有向图才有拓扑序列，如果有环没有拓扑序，有向无环图一定有拓扑序列，也被称为拓扑图
+
+![](/img/082115.jpg)
+
+入度是指有多少条边指向自己，因此所有入度为0的点都可以作为起点
+
+出度是指有多少条边出去
+
+* 把所有入度为0的点入队
+  * 一个有向无环图至少存在一个入度为0的点
+  * 有向无环图的拓扑序不一定是唯一的
+
 ```c++
 int n,m;
 int h[N],e[N],ne[N],idx;
 int d[N],q[N];
-
+void add(int a,int b){
+    e[idx] = b;
+    ne[idx] = h[a];
+    h[a]=idx++;
+    
+}
 bool topsort()
 {
     int hh = 0, tt = -1;
 
-    // d[i] 存储点i的入队
+    // d[i] 存储点i的入度
     for (int i = 1; i <= n; i ++ )
         if (!d[i])
-            q[ ++ tt] = i;
+            q[ ++ tt] = i;//数组模拟入队
 
-    while (hh <= tt)
+    while (hh <= tt)//队列不空
     {
-        int t = q[hh ++ ];
+        int t = q[hh ++ ];//取出来队头
 
-        for (int i = h[t]; i != -1; i = ne[i])
+        for (int i = h[t]; i != -1; i = ne[i])//枚举t的所有出边t->j，删掉t->j
         {
-            int j = e[i];
-            if (-- d[j] == 0)
-                q[ ++ tt] = j;
+            int j = e[i];//找到出边
+           d[j]--;
+            if ( d[j] == 0)//前面的所有点都已经排好了
+                q[ ++ tt] = j;//j入队
+         
         }
     }
 
     // 如果所有点都入队了，说明存在拓扑序列；否则不存在拓扑序列。
     return tt == n - 1;
 }
-
+//出队的顺序就是拓扑序
 ```
 
 ## 最短路
 
+* 源点起点，汇点终点
+* n是点的数量，m是边的数量
+* m和n^n一个级别的叫稠密图
+* m和n一个级别的叫稀疏图
+* 考察的难点在于如何把问题抽象成一个图，如何定义点和边，使得问题能够套入最短路模板
+* 图论侧重于实现
+
+![](/img/091441.jpg)
+
+### 单源最短路
+
+* 求一个点到其他所有点的最短距离
+  * 所有边权都是正数
+    * 朴素dijkstra
+      * O(n²)，适合稠密图，即边数比较多的时候，如当边数和n²是一个级别的时候
+    * 堆优化版dijkstra
+      * O(mlogn)，适合稀疏图，如n和m是一个级别的时候
+  * 存在负权边
+    * bellman-ford O(nm)（存在负环 ）
+    * spfa算法 一般：O(m)，最坏O（nm）（不存在负环）
+      * 如果限制经过的边数，只能用bellman-ford算法
+
+#### 朴素dijkstra算法
+
+* 时间复杂度是O(n²+m)，n表示点数，m表示边数
+* 初始化距离
+
+```c++
+int g[N][N];  // 存储每条边
+int dist[N];  // 存储1号点到每个点的最短距离
+bool st[N];   // 存储每个点的最短路是否已经确定
+
+// 求1号点到n号点的最短路，如果不存在则返回-1
+int dijkstra()
+{
+    memset(dist, 0x3f, sizeof dist);//初始化其他距离
+    dist[1] = 0;//初始化第一个点的距离
+
+    for (int i = 0; i < n - 1; i ++ )
+    {
+        int t = -1;     // 在还未确定最短路的点中，寻找距离最小的点
+        for (int j = 1; j <= n; j ++ )
+            if (!st[j] && (t == -1 || dist[t] > dist[j]))//当前点还没有确定最短路；没有赋值或者不是最短的
+                t = j;//赋值
+  // if(t==n)break;//优化可以加上
+        // 用t更新其他点的距离
+        for (int j = 1; j <= n; j ++ )
+            dist[j] = min(dist[j], dist[t] + g[t][j]);
+//判断长度，得出最小距离并更新
+        st[t] = true;
+    }
+
+    if (dist[n] == 0x3f3f3f3f) //不连通
+        return -1;
+    return dist[n];
+}
+//输入输出
+cin >> n>>m;
+memset(g,0x3f,sizeof g);
+while(m--){
+    int a,b,c;
+    cin>>a>>b>>c;
+    g[a][b]=min(g[a][b],c);
+}
+int t =dijkstra()l
+    cout<<t;
+return 0;
+```
+
+#### 堆优化版的dijkstra算法
+
+* 手写堆
+* 优先队列（不支持修改任意一个元素，里面的元素可能是m个，时间复杂度变为mlogm，但由于是稀疏图，所以和mlogn差不多
+
+```c++
+typedef pair<int, int> PII;
+
+int n;      // 点的数量
+int h[N], w[N], e[N], ne[N], idx;       // 邻接表存储所有边
+int dist[N];        // 存储所有点到1号点的距离
+bool st[N];     // 存储每个点的最短距离是否已确定
+
+void add(int a,int b,int c){
+    e[idx]=b,w[idx]= c,ne[idx]=h[a],h[a]=idx++;
+}
+// 求1号点到n号点的最短距离，如果不存在，则返回-1
+int dijkstra()
+{
+    memset(dist, 0x3f, sizeof dist);
+    dist[1] = 0;
+    priority_queue<PII, vector<PII>, greater<PII>> heap;//定义小根堆
+    heap.push({0, 1});      // first存储距离，second存储节点编号
+
+    while (heap.size())//堆里面非空
+    {
+        auto t = heap.top();
+        heap.pop();
+
+        int ver = t.second, distance = t.first;//编号；距离
+
+        if (st[ver]) continue;//冗余备份
+        st[ver] = true;
+
+        for (int i = h[ver]; i != -1; i = ne[i])
+        {
+            int j = e[i];
+            if (dist[j] > distance + w[i])
+            {
+                dist[j] = distance + w[i];//更新距离
+                heap.push({dist[j], j});//放入堆
+            }
+        }
+    }
+
+    if (dist[n] == 0x3f3f3f3f) return -1;
+    return dist[n];
+}
+int main(){
+    cin >> n>>m;
+    memset(h,-1,sizeof h);
+    while(m--){
+        int a,b,c;
+        cin >> a >> b>>c;
+        add(a,b,c);
+    }
+    int t = dijkstra();
+    cout<<t;
+    return 0;
+}
+```
+
+#### bellman-ford算法
+
+时间复杂度O(mn)，n表示点数，m表示边数
+
+dist[b]<=dist[a]+w 三角不等式
+
+有边数限制的最短路只能用bellman-ford算法
+
+```c++
+int n, m;       // n表示点数，m表示边数
+int dist[N];        // dist[x]存储1到x的最短路距离
+
+struct Edge     // 边，a表示出点，b表示入点，w表示边的权重
+{
+    int a, b, w;
+}edges[M];
+
+// 求1到n的最短路距离，如果无法从1走到n，则返回-1。
+int bellman_ford()
+{
+    memset(dist, 0x3f, sizeof dist);
+    dist[1] = 0;
+
+    // 如果第n次迭代仍然会松弛三角不等式，就说明存在一条长度是n+1的最短路径，由抽屉原理，路径中至少存在两个相同的点，说明图中存在负权回路。如果有负权回路，最短路不一定存在。
+    for (int i = 0; i < n; i ++ )
+    {
+        for (int j = 0; j < m; j ++ )
+        {
+            int a = edges[j].a, b = edges[j].b, w = edges[j].w;
+            if (dist[b] > dist[a] + w)
+                dist[b] = dist[a] + w;//更新路径，更新的过程叫做松弛操作
+        }
+    }
+
+    if (dist[n] > 0x3f3f3f3f / 2) return -1;
+    return dist[n];
+}
+```
+
+```c++
+#include <cstring>
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N=510,M=10010;
+int n ,m,k;
+int dist[N],backup[N];
+struct Edge{
+	int a,b,w;
+	
+}edges[M];
+int bellman_ford(){
+	memset(dist,0x3f,sizeof dist);
+	dist[1]=0;
+	for(int i = 0;i<k;i++){
+		memcpy(backup,dist,sizeof dist);
+		for(int j = 0;j<m;j++){
+			int a = edges[j].a,b=edges[j].b,w=edges[j].w;
+			dist[b]=min(dist[a]),backup[a]+w);
+		}
+	}
+	if(dist[n]>0x3f3f3f3f/2)return -1;
+	return dist[n];
+}
+int main(){
+	ios::sync_with_stdio(false);
+	cin.tie(0);
+	cin>>n>>m>>k;
+	 for(int i = 0;i<m;i++)
+	 	{
+	 		int a,b,w;
+	 		cin>>a>>b>>w;
+			 edges[i] ={a,b,w};
+		 }
+		 int t =bellman_ford();
+		 if(t==-1) puts("impossible");
+		 else cout<<t;
+		 return 0;
+}
+```
+
+#### spfa算法
+
+图中一定不能有负环
+
+```c++
+int n;      // 总点数
+int h[N], w[N], e[N], ne[N], idx;       // 邻接表存储所有边
+int dist[N];        // 存储每个点到1号点的最短距离
+bool st[N];     // 存储每个点是否在队列中
+
+// 求1号点到n号点的最短路距离，如果从1号点无法走到n号点则返回-1
+void add(int a,int b,int c){
+    e[idx]=b,w[idx]=c,ne[idx]=h[a],h[a]=idx++;
+}
+int spfa()
+{
+    memset(dist, 0x3f, sizeof dist);
+    dist[1] = 0;//初始化
+
+    queue<int> q;
+    q.push(1);
+    st[1] = true;//把第一个数放入队列中
+
+    while (q.size())//队列不空
+    {
+        auto t = q.front();//取出队头
+        q.pop();//弹出队头
+
+        st[t] = false;//队头已经弹出
+
+        for (int i = h[t]; i != -1; i = ne[i])//更新t的所有邻边
+        {
+            int j = e[i];//取出邻边
+            if (dist[j] > dist[t] + w[i])//判断能否更新
+            {
+                dist[j] = dist[t] + w[i];
+                if (!st[j])     // 如果队列中已存在j，则不需要将j重复插入
+                {
+                    q.push(j);
+                    st[j] = true;
+                }
+            }
+        }
+    }
+
+    if (dist[n] == 0x3f3f3f3f) return -1;
+    return dist[n];
+}
+```
+
+##### spfa判断途中是否存在负环
+
+```c++
+int n;      // 总点数
+int h[N], w[N], e[N], ne[N], idx;       // 邻接表存储所有边
+int dist[N], cnt[N];        // dist[x]存储1号点到x的最短距离，cnt[x]存储1到x的最短路中经过的点数
+bool st[N];     // 存储每个点是否在队列中
+
+// 如果存在负环，则返回true，否则返回false。
+bool spfa()
+{
+    // 不需要初始化dist数组
+    // 原理：如果某条最短路径上有n个点（除了自己），那么加上自己之后一共有n+1个点，由抽屉原理一定有两个点相同，所以存在环。
+
+    queue<int> q;
+    for (int i = 1; i <= n; i ++ )
+    {
+        q.push(i);
+        st[i] = true;
+    }
+
+    while (q.size())
+    {
+        auto t = q.front();
+        q.pop();
+
+        st[t] = false;
+
+        for (int i = h[t]; i != -1; i = ne[i])
+        {
+            int j = e[i];
+            if (dist[j] > dist[t] + w[i])
+            {
+                dist[j] = dist[t] + w[i];
+                cnt[j] = cnt[t] + 1;
+                if (cnt[j] >= n) return true;       // 如果从1号点到x的最短路中包含至少n个点（不包括自己），则说明存在环
+                if (!st[j])
+                {
+                    q.push(j);
+                    st[j] = true;
+                }
+            }
+        }
+    }
+
+    return false;
+}
+```
+
+
+
+### 多源汇最短路
+
+* 很多不同起点到其他点的最短路
+
+* Floyd算法O(n^3)
+
+#### Floyd算法
+
+```c++
+cosnt int INF=1e9;
+初始化：
+    for (int i = 1; i <= n; i ++ )
+        for (int j = 1; j <= n; j ++ )
+            if (i == j) d[i][j] = 0;
+            else d[i][j] = INF;
+
+// 算法结束后，d[a][b]表示a到b的最短距离
+void floyd()
+{
+    for (int k = 1; k <= n; k ++ )
+        for (int i = 1; i <= n; i ++ )
+            for (int j = 1; j <= n; j ++ )
+                d[i][j] = min(d[i][j], d[i][k] + d[k][j]);
+}
+
+```
+
 ## 最小生成树
 
+最小生成树没有环，正边和负边都没有问题
+
+### 普利姆算法Prim
+
+#### 朴素版prim
+
+时间复杂度O(n²),n表示点数，m表示边数，稠密图
+
+```c++
+int n;      // n表示点数
+int g[N][N];        // 邻接矩阵，存储所有边
+int dist[N];        // 存储其他点到当前最小生成树的距离
+bool st[N];     // 存储每个点是否已经在生成树中
+
+//到集合的距离就是一个点连接集合的所有边中最短的那一条
+// 如果图不连通，则返回INF(值是0x3f3f3f3f), 否则返回最小生成树的树边权重之和
+int prim()
+{
+    memset(dist, 0x3f, sizeof dist);//初始化最短距离
+
+    int res = 0;
+    for (int i = 0; i < n; i ++ )//n次迭代
+    {
+        int t = -1;//不在集合当中的距离最小点的编号
+        for (int j = 1; j <= n; j ++ )
+            if (!st[j] && (t == -1 || dist[t] > dist[j]))
+                t = j;
+
+        if (i && dist[t] == INF) return INF;
+
+        if (i) res += dist[t];//只要不是第一个点
+        st[t] = true;
+
+        for (int j = 1; j <= n; j ++ ) dist[j] = min(dist[j], g[t][j]);
+    }
+
+    return res;
+}
+```
+
+#### 堆优化版
+
+时间复杂度O(mlogn)，稀疏图
+
+### 克鲁斯卡尔算法Kruskal
+
+时间复杂度O(mlogn),n表示点数，m表示边数
+
+* 将所有边按照权重从小到大排序
+* 枚举每条边a,b，权重c
+  * 如果a，b不连通，将这条边加入集合中来。
+
+```c++
+int n, m;       // n是点数，m是边数
+int p[N];       // 并查集的父节点数组
+
+struct Edge     // 存储边
+{
+    int a, b, w;
+
+    bool operator< (const Edge &W)const//重载小于号
+    {
+        return w < W.w;
+    }
+}edges[M];
+
+int find(int x)     // 并查集核心操作
+{
+    if (p[x] != x) p[x] = find(p[x]);
+    return p[x];
+}
+
+int kruskal()
+{
+    sort(edges, edges + m);//把所有边排序
+
+    for (int i = 1; i <= n; i ++ ) p[i] = i;    // 初始化并查集
+
+    int res = 0, cnt = 0;
+    for (int i = 0; i < m; i ++ )//从小到大枚举所有边
+    {
+        int a = edges[i].a, b = edges[i].b, w = edges[i].w;
+
+        a = find(a), b = find(b);//让a，b分别等于祖宗节点
+        if (a != b)     // 如果两个连通块不连通，则将这两个连通块合并
+        {
+            p[a] = b;//合并两个连通块
+            res += w;//存的是最小生成树中所有树边的权重之和
+            cnt ++ ;//存的是当前加入了多时少条边
+        }
+    }
+
+    if (cnt < n - 1) return INF;//图不是联通的
+    return res;//输出所有树边的权重之和
+}
+```
+
+
+
 ## 二分图：染色法、匈牙利算法
+
+### 染色法
+
+判断一个图是不是二分图
+
+* 当且仅当图中不含奇数环，奇数环是指边的数量是奇数，二分图是指可以把所有点划分到两边去，使得所有的边都是在集合之间的，集合内部没有边
+* 一条边的旁边两个点颜色一定不同
+
+O(n+m)
+
+```c++
+int n;      // n表示点数
+int h[N], e[M], ne[M], idx;     // 邻接表存储图
+int color[N];       // 表示每个点的颜色，-1表示未染色，0表示白色，1表示黑色
+void add(int a,int b){
+    e[idx]=b,ne[idx]=h[a],h[a]=idx++;
+}
+// 参数：u表示当前节点，c表示当前点的颜色
+bool dfs(int u, int c)
+{
+    color[u] = c;
+    for (int i = h[u]; i != -1; i = ne[i])
+    {
+        int j = e[i];
+        if (color[j] == -1)
+        {
+            if (!dfs(j, !c)) return false;
+        }
+        else if (color[j] == c) return false;
+    }
+
+    return true;
+}
+
+bool check()
+{
+    memset(color, -1, sizeof color);
+    bool flag = true;
+    for (int i = 1; i <= n; i ++ )
+        if (color[i] == -1)
+            if (!dfs(i, 0))
+            {
+                flag = false;
+                break;
+            }
+    return flag;
+}
+int main(){
+    cin>> n >> m;
+    memset(h,-1,sizeof h);
+    while(m--){
+        int a,b;
+        cin >> a >>b;
+        add(a,b),add(b,a);
+    }
+}
+```
+
+### 匈牙利算法
+
+O(mn)，实际运行时间一般远小于O（mn）
+
+```c++
+int n1, n2;     // n1表示第一个集合中的点数，n2表示第二个集合中的点数
+int h[N], e[M], ne[M], idx;     // 邻接表存储所有边，匈牙利算法中只会用到从第一个集合指向第二个集合的边，所以这里只用存一个方向的边
+int match[N];       // 存储第二个集合中的每个点当前匹配的第一个集合中的点是哪个
+bool st[N];     // 表示第二个集合中的每个点是否已经被遍历过
+
+bool find(int x)
+{
+    for (int i = h[x]; i != -1; i = ne[i])
+    {
+        int j = e[i];
+        if (!st[j])
+        {
+            st[j] = true;
+            if (match[j] == 0 || find(match[j]))
+            {//没有匹配或者匹配了但是能够找到另一个匹配的
+                match[j] = x;//匹配
+                return true;
+            }
+        }
+    }
+
+    return false;
+}
+
+// 求最大匹配数，依次枚举第一个集合中的每个点能否匹配第二个集合中的点
+int res = 0;
+for (int i = 1; i <= n1; i ++ )
+{
+    memset(st, false, sizeof st);//清空，使得右边集合中点处于未匹配状态
+    if (find(i)) res ++ ;
+}
+```
+
