--- a/source/_posts/算法·数学知识.md
+++ b/source/_posts/算法·数学知识.md
@@ -357,9 +357,14 @@ int main(){
 $$
 a^{φ(n)}≡1(mod n)
 $$
-
+当n是质数的时候，有：
+$$
+a^{n-1}≡1(mod n)
+$$
 
 # 快速幂
+
+![]()
 
 ```c++
 求 m^k mod p，时间复杂度 O(logk)。
