--- a/source/_posts/算法·数学知识.md
+++ b/source/_posts/算法·数学知识.md
@@ -368,7 +368,6 @@ $$
 
 ```c++
 求 m^k mod p，时间复杂度 O(logk)。
-
 int qmi(int m, int k, int p)
 {
     int res = 1 % p, t = m;
@@ -381,6 +380,13 @@ int qmi(int m, int k, int p)
     return res;
 }
 ```
+
+```
+#include <iostream>
+#include <algorithm>
+```
+
+
 
 # 扩展欧几里得算法
 
