--- a/source/_posts/算法·数学知识.md
+++ b/source/_posts/算法·数学知识.md
@@ -364,7 +364,7 @@ $$
 
 # 快速幂
 
-![]()
+![](/img/124820.jpg)
 
 ```c++
 求 m^k mod p，时间复杂度 O(logk)。
@@ -381,9 +381,27 @@ int qmi(int m, int k, int p)
 }
 ```
 
-```
+```c++
 #include <iostream>
 #include <algorithm>
+using namespace std;
+typedef long long LL;
+int qmi(int a,int k,int p){//返回的就是a^k%p的结果
+    int res = 1;
+    
+}
+int main(){
+ 	ios::sync_with_stdio(false);
+ 	cin.tie(0);
+ 	itn n;
+ 	cin >> n;
+ 	while(n--){
+ 	int a,k,p;
+ 	cin >>a >> k>>p;
+ 	cout<<qmi(a,k,p);
+ 	}
+ 	return 0;
+}
 ```
 
 
