--- a/source/_posts/算法·数学知识.md
+++ b/source/_posts/算法·数学知识.md
@@ -15,10 +15,9 @@ index_img: /img/1920x1080 (5).jpg
 ## 质数的判定——试除法
 
 时间复杂度一定为
-$$
+$
 O(\sqrt x)
-$$
-
+$
 
 ```c++
 bool is_prime(int x)
@@ -40,10 +39,9 @@ bool is_prime(int x)
 n中最多只包含一个大于sqrt(n)的质因子
 
 时间复杂度
-$$
+$
 O(\sqrt x)-O(logn)
-$$
-
+$
 
 ```c++
 void divide(int x)
@@ -236,19 +234,17 @@ int gcd(int a, int b)
 **互质是公约数只有1的两个整数，叫做互质整数**
 
 1-N中与N互质的数的个数被称为欧拉函数,记为Φ(N)。若在算术基本定理中：
-$$
+$
 N=p1^{α^1}*p2^{α^2}*...*pm^{α^m}
-$$
+$
 则：
-$$
+$
 Φ(N)=N*\frac {p1-1}{p1}*\frac {p2-1}{p2}*...*\frac {pm-1}{pm}
-$$
+$
 
 $$
 Φ(N)=N*(1-\frac{1}{p1})*(1-\frac{1}{p2})*...*(1-\frac{1}{pm})
 $$
-
-
 
 * 从1-N中去掉p1,p2...pk的所有倍数(都含有公约数质数本身)
 * 加上所有pi*pj的倍数（所有两个质数的组合）
@@ -259,10 +255,9 @@ $$
 ## 欧拉函数
 
 时间复杂度是
-$$
+$
 O(\sqrt n)
-$$
-
+$
 
 ```c++
 int phi(int x)
@@ -324,43 +319,43 @@ typedef long long LL;
 bool st[N];
 int phi[N];
 LL get_eluers(int n){
-	phi[1]=1;
-	for(int i = 2;i<=n;i++){
-		if(!st[i]){//是质数 
-			primes[cnt++]=i;
-			phi[i]=i-1;
-		}
-		for(int j = 0;primes[j]<=n/i;j++){
-			st[primes[j]*i=true;
-			if(i%primes[j]==0){
-				phi[primes[j]*i]=phi[i]*primes[j];
-				break;
-			}
-			phi[primes[j]*i]=phi[i]*(primes[j]-1);
-		}
-	}
-	LL res=0;
-	for(int i = 1;i<=n;i++) res+=phi[i];
-	return res;
+    phi[1]=1;
+    for(int i = 2;i<=n;i++){
+        if(!st[i]){//是质数 
+            primes[cnt++]=i;
+            phi[i]=i-1;
+        }
+        for(int j = 0;primes[j]<=n/i;j++){
+            st[primes[j]*i=true;
+            if(i%primes[j]==0){
+                phi[primes[j]*i]=phi[i]*primes[j];
+                break;
+            }
+            phi[primes[j]*i]=phi[i]*(primes[j]-1);
+        }
+    }
+    LL res=0;
+    for(int i = 1;i<=n;i++) res+=phi[i];
+    return res;
 }
 int main(){
-	int n;
-	cin >> n;
-	cout<<get_eluers(n);<<endl;
-	return 0;
+    int n;
+    cin >> n;
+    cout<<get_eluers(n);<<endl;
+    return 0;
 }
 ```
 
 ## 欧拉定理
 
 若a与n互质，则有
-$$
+$
 a^{φ(n)}≡1(mod n)
-$$
+$
 当n是质数的时候，有：
-$$
+$
 a^{n-1}≡1(mod n)
-$$
+$
 
 # 快速幂
 
@@ -388,23 +383,26 @@ using namespace std;
 typedef long long LL;
 int qmi(int a,int k,int p){//返回的就是a^k%p的结果
     int res = 1;
-    
+    while(k){
+        if(k&1) res = (LL)res*a%p;
+        k>>=1;
+        a=(LL)a*a %p;
+    }
+    return res;
 }
 int main(){
- 	ios::sync_with_stdio(false);
- 	cin.tie(0);
- 	itn n;
- 	cin >> n;
- 	while(n--){
- 	int a,k,p;
- 	cin >>a >> k>>p;
- 	cout<<qmi(a,k,p);
- 	}
- 	return 0;
+     ios::sync_with_stdio(false);
+     cin.tie(0);
+     itn n;
+     cin >> n;
+     while(n--){
+     int a,k,p;
+     cin >>a >> k>>p;
+     cout<<qmi(a,k,p);
+     }
+     return 0;
 }
 ```
-
-
 
 # 扩展欧几里得算法
 
@@ -428,8 +426,6 @@ int exgcd(int a, int b, int &x, int &y)
 ```
 
 ```
-
-
 
 # 高斯消元
 
@@ -478,4 +474,3 @@ int gauss()
 # 容斥原理
 
 # 简单博弈论
-
