--- a/source/_posts/算法·数学知识.md
+++ b/source/_posts/算法·数学知识.md
@@ -10,9 +10,9 @@ index_img: /img/1920x1080 (5).jpg
 
 数论一定要算时间复杂度以防超时
 
-# 质数
+## 质数
 
-## 质数的判定——试除法
+### 质数的判定——试除法
 
 时间复杂度一定为
 $$
@@ -30,7 +30,7 @@ bool is_prime(int x)
 }
 ```
 
-## 试除法分解质因数
+### 试除法分解质因数
 
 从小到大枚举所有约数
 
@@ -59,7 +59,7 @@ void divide(int x)
 }
 ```
 
-## 朴素筛法求素数（埃筛）
+### 朴素筛法求素数（埃筛）
 
 时间复杂度是nlogn
 
@@ -80,7 +80,7 @@ void get_primes(int n)
 }
 ```
 
-## 线性筛法求素数
+### 线性筛法求素数
 
 质数定理：1-n中有n/lnn个质数
 
@@ -107,11 +107,11 @@ void get_primes(int n)
 
 朴素筛法和线性筛法的最大区别在于，朴素筛法可能出现重复筛的过程（一个数有多个质因数），因为是从1-n找出质数然后在进行筛除，而线性筛法是将所有质数先进行，然后乘以倍数，找出质数在进行下一轮质数排查。一个是横向一个是纵向
 
-# 约数
+## 约数
 
 int范围内约数最多的大概是1500个
 
-## 试除法求约数
+### 试除法求约数
 
 ```c++
 vector<int> get_divisors(int x)
@@ -140,7 +140,7 @@ int main(){
 }
 ```
 
-## 约数个数和约数之和
+### 约数个数和约数之和
 
 ```c++
 如果 N = p1^c1 * p2^c2 * ... *pk^ck
@@ -215,7 +215,7 @@ int main(){
 }
 ```
 
-## 欧几里得算法（辗转相除法）
+### 欧几里得算法（辗转相除法）
 
 d能整除a，d能整除b，d能整除a+b
 
@@ -230,7 +230,7 @@ int gcd(int a, int b)
 } 
 ```
 
-# 欧拉函数
+## 欧拉函数
 
 **互质是公约数只有1的两个整数，叫做互质整数**
 
@@ -253,7 +253,7 @@ $$
 * 加上pi * pj * pk * pl的倍数
 * 依此类推
 
-## 欧拉函数
+### 欧拉函数
 
 时间复杂度是
 $$
@@ -277,7 +277,7 @@ int phi(int x)
 }
 ```
 
-## 筛法求欧拉函数
+### 筛法求欧拉函数
 
 求1-n中每一个数的欧拉函数
 
@@ -348,7 +348,7 @@ int main(){
 }
 ```
 
-## 欧拉定理
+### 欧拉定理
 
 * ≡同余，两个整数除以同一个整数，若得相同余数，则二整数同余。
 
@@ -361,7 +361,7 @@ $$
 a^{n-1}≡1(mod n)
 $$
 
-# 快速幂
+## 快速幂
 
 ![](/img/124820.jpg)
 
@@ -408,7 +408,7 @@ int main(){
 }
 ```
 
-## 逆元
+### 逆元
 
 若整数b,m互质，并且b|a，则存在一个整数x，使得
 $$
@@ -448,9 +448,9 @@ int main(){
 }
 ```
 
-# 扩展欧几里得算法
+## 扩展欧几里得算法
 
-## 裴蜀定理
+### 裴蜀定理
 
 有一对正整数a,b，那么存在非零整数x,y，使得ax+by=gcd(a,b)(gcd是最大公约数)，且为a和b能凑出来的最小的正整数，若一个数能整除gcd(a,b)则有解，否则无解
 
@@ -482,7 +482,7 @@ int main(){
 }
 ```
 
-## 求余数方程
+### 求余数方程
 
 ```c++
 // 求x, y，使得ax + by = gcd(a, b)
@@ -513,7 +513,7 @@ int main(){
 }
 ```
 
-# 中国剩余定理
+## 中国剩余定理
 
 ![](/img/215542.jpg)
 
@@ -538,7 +538,7 @@ $$
 
 * 求逆相当于解ax≡1（mod m），用扩展欧几里得算法可以求
 
-# 高斯消元
+## 高斯消元
 
 时间复杂度O(n^3)
 
@@ -655,7 +655,7 @@ for(int i =0;i<n;i++)
 }
 ```
 
-# 组合计数
+## 组合计数
 
 * 有很多种方式，根据数据范围进行选择
 
@@ -663,7 +663,7 @@ $$
 C_n^m=\frac {A_n^m}{A_m^m}=\frac {n(n-1)(n-2)...(n-m+1)}{m!}=\frac {n!}{m!(n-m)!}
 $$
 
-## 递推法求组合数
+### 递推法求组合数
 
 $$
 C_a^b=C_{a-1}^b+C_{a-1}^{b-1}
@@ -681,7 +681,7 @@ for (int i = 0; i < N; i ++ )
         else c[i][j] = (c[i - 1][j] + c[i - 1][j - 1]) % mod;
 ```
 
-## 通过预处理逆元的方式求组合数
+### 通过预处理逆元的方式求组合数
 
 1万组 1<=b<=a<=10^5
 $$
@@ -750,7 +750,7 @@ int main(){
 }
 ```
 
-## Lucas定理
+### Lucas定理
 
 时间复杂度：
 
@@ -805,7 +805,7 @@ int main(){
 }
 ```
 
-## 分解质因数求组合数
+### 分解质因数求组合数
 
 大答案需要高精度
 
@@ -907,7 +907,7 @@ int main(){
 }
 ```
 
-# 卡特兰数
+## 卡特兰数
 
 给定n个0和n个1，它们按照某种顺序排成长度为2n的序列，满足任意前缀中0的个数都不少于1的个数的序列的数量为： Cat(n) = C(2n, n) / (n + 1)
 
@@ -942,6 +942,18 @@ int main(){
 }
 ```
 
-# 容斥原理
+## 容斥原理
 
-# 简单博弈论
+![](/img/102524.jpg)
+
+![](/img/102717.jpg)
+
+时间复杂度2^n-1
+
+从n个数中选任意多个数的方案数
+$$
+C^0_n+C_n^1+...+C_n^n=2^n
+$$
+
+
+## 简单博弈论
