--- a/source/_posts/算法·数学知识.md
+++ b/source/_posts/算法·数学知识.md
@@ -948,12 +948,174 @@ int main(){
 
 ![](/img/102717.jpg)
 
-时间复杂度2^n-1
+时间复杂度2^n
 
 从n个数中选任意多个数的方案数
+
+![](/img/103922.jpg)
 $$
 C^0_n+C_n^1+...+C_n^n=2^n
 $$
+一般枚举所有的选法，用位运算来枚举
 
+```c++
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N =20;
+int n,m;
+int p[N];
+typedef long long LL;
+int main(){
+	cin >> n>>m;
+	for(int i =0;i<m;i++) cin>>p[i];
+	int res = 0;
+	for(int i = 1;i<1<<m;i++){
+		int t =1,cnt=0;    //t表示所有容斥数的乘积，cnt用来表示有多少个集合 
+		for(int j =0;j<m;j++)
+			if(i>>j&1){
+				cnt ++;
+				if((LL)t*p[j]>n){
+					t=-1;
+					break;
+				}
+                t*=p[j];
+			}
+			if(t!=-1)
+			{
+				if(cnt%2) res+=n/t;
+				else res-=n/t;
+			}
+		
+		
+	}
+	cout<<res<<endl;
+	return 0;
+}
+```
 
 ## 简单博弈论
+
+先手必胜状态：可以走到某一个必败状态
+
+先手必败状态：走不到任何一个必败状态
+
+### NIM游戏
+
+给定N堆物品，第i堆物品有Ai个。两名玩家轮流行动，每次可以任选一堆，取走任意多个物品，可把一堆取光，但不能不取。取走最后一件物品者获胜。两人都采取最优策略，问先手是否必胜。
+
+我们把这种游戏称为NIM博弈。把游戏过程中面临的状态称为局面。整局游戏第一个行动的称为先手，第二个行动的称为后手。若在某一局面下无论采取何种行动，都会输掉游戏，则称该局面必败。
+所谓采取最优策略是指，若在某一局面下存在某种行动，使得行动后对面面临必败局面，则优先采取该行动。同时，这样的局面被称为必胜。我们讨论的博弈问题一般都只考虑理想情况，即两人均无失误，都采取最优策略行动时游戏的结果。
+NIM博弈不存在平局，只有先手必胜和先手必败两种情况。
+
+定理： NIM博弈先手必胜，当且仅当 A1 ^ A2 ^ … ^ An != 0
+
+NIM博弈先手必败：A1 ^ A2 ^ … ^ An = 0
+
+```c++
+#include <iostream>
+#include <algorithm>
+using namespace std;
+int main(){
+	int n;
+	int res=0;
+	cin >>n;
+	while(n--){
+		int x;
+		cin >> x;
+		res^=x;
+	}
+	if(res)puts("Yes");
+	else puts("No");
+	return 0;
+}
+```
+
+### 游戏ICG
+
+若一个游戏满足：
+
+由两名玩家交替行动；
+在游戏进程的任意时刻，可以执行的合法行动与轮到哪名玩家无关；
+不能行动的玩家判负；
+则称该游戏为一个公平组合游戏。
+NIM博弈属于公平组合游戏，但城建的棋类游戏，比如围棋，就不是公平组合游戏。因为围棋交战双方分别只能落黑子和白子，胜负判定也比较复杂，不满足条件2和条件3。
+
+### 有向图游戏
+
+给定一个有向无环图，图中有一个唯一的起点，在起点上放有一枚棋子。两名玩家交替地把这枚棋子沿有向边进行移动，每次可以移动一步，无法移动者判负。该游戏被称为有向图游戏。
+任何一个公平组合游戏都可以转化为有向图游戏。具体方法是，把每个局面看成图中的一个节点，并且从每个局面向沿着合法行动能够到达的下一个局面连有向边。
+
+#### Mex运算
+
+设S表示一个非负整数集合。定义mex(S)为求出不属于集合S的最小非负整数的运算，即：
+mex(S) = min{x}, x属于自然数，且x不属于S
+
+#### SG函数
+
+在有向图游戏中，对于每个节点x，设从x出发共有k条有向边，分别到达节点y1, y2, …, yk，定义SG(x)为x的后继节点y1, y2, …, yk 的SG函数值构成的集合再执行mex(S)运算的结果，即：
+SG(x) = mex({SG(y1), SG(y2), …, SG(yk)})
+特别地，整个有向图游戏G的SG函数值被定义为有向图游戏起点s的SG函数值，即SG(G) = SG(s)。
+
+SG（终点）=0
+
+![](/img/120655.jpg)
+
+必败态是0
+
+任何一种非零状态一定会有某种方式到0，任何一种0的方式是走不到0的
+
+n个图的局面：
+
+![](/img/121057.jpg)
+
+#### 定理
+
+有向图游戏的某个局面必胜，当且仅当该局面对应节点的SG函数值大于0。
+有向图游戏的某个局面必败，当且仅当该局面对应节点的SG函数值等于0。
+
+#### 有向图游戏的和
+
+```c++
+//集合-nim
+#include <iostream>
+#include <algorithm>
+#include <cstring>
+#include <unordered_set>
+using namespace std;
+const int N=110,M=10010;
+int n,m;
+int s[N],f[N];
+int sg(int x){
+	if(f[x]!=-1) return f[x];
+	
+	unordered_set<int> S;
+	for(int i = 0;i<m;i++){
+		int sum=s[i];
+		if(x>=sum)S.insert(sg(x-sum));
+		
+	}
+	for(int i = 0;;i++)
+		if(!S.count(i))
+			return f[x]=1;
+	
+	
+}
+int main(){
+	cin >>m;
+	for(int i =0;i<m;i++)
+		cin >>s[i];
+		cin>>n;
+		memset(f,-1,sizeof f);
+		int res =0;
+		for(int i = 0;i<n;i++){
+			int x;
+			cin>>x;
+			res^=sg(x);
+		}
+		if(res) puts("Yes");
+		else puts("No");
+		return 0;
+}
+```
+
