--- a/source/_posts/算法·动态规划.md
+++ b/source/_posts/算法·动态规划.md
@@ -99,26 +99,314 @@ int main(){
 
 * 每件物品可以用无限次
 
-
+![](/img/155653.png)
 
 ```c++
-
+//朴素版
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N=1010;
+int n,m;
+int v[N],w[N];
+int f[N][N];
+int main(){
+	cin >> n>>m;
+	for(int i =1;i<=n;i++) cin >> v[i]>>w[i];
+	
+	for(int i = 1;i<=n;i++)
+		for(int j = 0;j<=m;j++)
+			for(int k = 0;k*v[i]<=j;k++)
+				f[i][j]=max(f[i][j],f[i-1][j-v[i]*k]+w[i]*k);
+	cout<<f[n][m]<<endl;
+	return 0;
+}
 ```
 
+![](/img/162046.jpg)
 
+```c++
+//优化版
+//朴素版
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N=1010;
+int n,m;
+int v[N],w[N];
+int f[N][N];
+int main(){
+	cin >> n>>m;
+	for(int i =1;i<=n;i++) cin >> v[i]>>w[i];
+	
+	for(int i = 1;i<=n;i++)
+		for(int j = 0;j<=n;j++)
+        {
+            f[i][j]=f[i-1][j];
+            if(j>=v[i])f[i][j]=max(f[i][j],f[i][j-v[i]]+w[i]);
+        }
+	cout<<f[n][m]<<endl;
+	return 0;
+}
+```
+
+```c++
+//一维
+//优化版
+//朴素版
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N=1010;
+int n,m;
+int v[N],w[N];
+int f[N][N];
+int main(){
+	cin >> n>>m;
+	for(int i =1;i<=n;i++) cin >> v[i]>>w[i];
+	
+	for(int i = 1;i<=n;i++)
+		for(int j = v[i];j<=m;j++)//01循环体积从大到小，完全背包问题从小到大
+    	    f[j]=max(f[j],f[j-v[i]]+w[i]);
+        
+	cout<<f[m]<<endl;
+	return 0;
+}
+```
 
 ### 多重背包问题
 
-* 每个物品的个数不一样，有个数限制，最多有Si个
+* 每个物品的个数不一样，有个数限制，既不是一件也不是无穷件，而是有一个具体的数值最多有Si个
 * 有朴素版和优化版
+
+![]()
+
+#### 朴素版
+
+*  
+  $$
+  f[i][j]=max(f[i-1][j-v[i]*k]+w[i]*k);k=0,1,2,...,s[i]
+  $$
+
+```c++
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N =110;
+int n,m;
+int v[N],w[N],s[N];
+int f[N][N];
+int main(){
+    cin >> n>>m;
+    for(int i = 1;i<=n;i++)
+        cin >> v[i]>>w[i]>>s[i];
+    for(int i =1;i<=n;i++)
+        for(int j = 0;j<=m;j++)
+            for(int k = 0;k<=s[i] && k*v[i]<=j;k++)
+                f[i][j]=max(f[i][j],f[i-1][j-v[i]*k]+w[i]*k);
+    cout<<f[n][m]<<endl;
+}
+```
+
+```c++
+//优化版，nvlogs
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N =25000,M=2010;
+int n,m;
+int v[N],w[N],s[N];
+int f[N];
+int main(){
+    cin >> n>>m;
+    int cnt=0;
+    for(int i = 1;i<=n;i++){
+        int a,b,s;
+        cin >>a>>b>>s;
+        int k = 1;
+        while(k<=s){
+            cnt++
+                v[cnt]=a*k;
+            	v[cnt]=b*k;
+            s-=k;
+            k*=2;
+        }
+        if(s>0){
+           cnt++;
+           v[cnt]=a*s;
+           w[cnt]=b*s;
+       }
+    }
+       n=cnt;
+          for(int i =1;i<=n;i++)
+              for(int j = m;j>=v[i];j--)
+                  f[j]=max(f[j],f[j-v[i]]+w[i]);
+    cout<<f[m]<<endl;
+    return 0;
+}
+
+```
 
 ### 分组背包问题
 
 * 物品有N组，每一组物品里有若干种，每一组里面最多选一种物品
 
+* 分组背包是枚举第i组选哪个，多重背包是枚举第i组选几个
+
+* 转移的时候用的是上一层的状态就从大到小枚举体积，用的是本层就要从小到大枚举体积
+
+  
+
+```c++
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const in N =110;
+int n,mm;
+int v[N][N],w[N][N],s[N];
+int f[N];
+int main(){
+    cin >>n>>n;
+    for(int i =1;i<=n;i++)
+    {
+        cin >>s[i];
+        for(int j = 0;j<s[i];j++)
+            cin>>v[i][j]>>w[i][j];
+    }
+    for(int i =1;i<=n;i++)
+        for(int j = m;j>=0;j++)
+            for(int k =0;k<s[i];k++)
+                if(v[i][k]<=j)
+                    f[j]=max(f[j],f[j-v[i][k]]+w[i][k]);
+    cout<<f[m]<<endl;
+    return 0;
+}
+```
+
 ## 线性DP
 
+时间复杂度一般为状态数量*转移计算量
+
+最大最小值可以有重复，数量不可以有重复
+
+### 数字三角形
+
+![](/img/193629.jpg)
+
+```c++
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N=510,INF=1e9;
+int n,m;
+int a[N][N];
+int f[N][N];
+int main(){
+  cin >> n;
+  for(int i  =1;i<=n;i++)
+  	for(int j = 1;j<=i;j++)
+  		cin >> a[i][j];
+    for(int i=1;i<=n;i++)
+        for(int j = 1;j<=i;j++)
+            f[i][j]=-INF;
+    f[1][1]=a[1][1];
+    for(int i =2;i <=n;i++)
+        for(int j =1;j<=i;j++)
+            f[i][j]=max(f[i-1][j-1]+a[i][j],f[i-1][j]+a[i][j]);
+    int res=-INF;
+    for(int i =1;i<=n;i++)res=max(res,f[n][i]);
+    cout<<res;
+    return 0;
+}
+```
+
+### 上升子序列
+
+![](/img/213015.jpg)
+
+```c++
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N=1010;
+int n;
+int a[N],f[N];
+int main(){
+    cin >> n;
+    for(int i =1;i<=n;i++)
+        	cin>>a[i];
+    for(int i = 1;i<=n;i++)
+    {
+        f[i]=1;//只有a[i]一个数
+        for(int j =1;j<i;j++)
+            if(a[j]<a[i])
+                f[i]=max(f[i],f[j]+1);
+    }
+    int res=0;
+    for(int i =1;i<=n;i++)res=max(res,f[i]);
+    cout<< res;
+    return 0;
+}
+```
+
+### 最长公共子序列
+
+![](/img/221221.png)
+
+```c++
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N =1010;
+int n,m;
+int a[N],b[N];
+int f[N][N];
+int main(){
+     cin >> n>>m;
+     cin >> a+1>>b+1;
+     for(int i =1;i<=n;i++)
+     	for(int j =1;j<=m;j++)
+     		{
+     		f[i][j]=max(f[i-1][j],f[i][j-1]);
+     		if(a[i]==b[j])f[i][j]=max(f[i][j],f[i-1][j-1]+1);
+     		}
+     		cout<<f[n][m];
+    return 0;
+}
+```
+
 ## 区间DP
+
+### 石子合并
+
+![](/img/230743.jpg)
+
+```c++
+#include <iostream>
+#include <algorithm>
+using namespace std;
+const int N=310;
+	int n;
+	int s[N];
+	int f[N][N];
+	
+int main(){
+ cin >>n;
+ for(int i =1;i<=n;i++)	cin>>s[i];
+ 	for(int i =1;i<=n;i++) 		s[i]+=s[i-1];
+	for(int len=2;len<=n;len++)
+		for(int i =1;i+len-1<=n;i++){
+			int l = i,r=i+len-1;
+			f[l][r]=1e8;
+			for(int k = l;k<r;k++)
+				f[l][r]=min(f[l][r],f[l][k]+f[k+1][r]+s[r]-s[l-1]);
+				
+		}
+		cout<<f[i][n];
+		return 0;
+ 
+}
+```
 
 ## 计数类DP
 
